--- a/App.config
+++ b/App.config
@@ -1,6 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <appSettings>
+    <add key="sysloghost" value="gcsmon01.amers1.ciscloud"/>
+    <add key="syslogport" value="5145"/>
+    <add key="syslogtransport" value="udp"/>
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
+  </startup>
 </configuration>
