--- a/NLog.config
+++ b/NLog.config
@@ -23,7 +23,7 @@
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="file" />
-    <logger name="*" minlevel="Debug" writeTo="console" />
+    <logger name="*" minlevel="Info" writeTo="file" />
+    <logger name="*" minlevel="Info" writeTo="console" />
   </rules>
 </nlog>
