BOM now added to UTF-8 msg, as per spec. Installer now adds config values

--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="sysloghost" value="gcsmon01.amers1.ciscloud"/>
+    <add key="sysloghost" value="gcsmon01.ciscloud"/>
     <add key="syslogport" value="5145"/>
     <add key="syslogtransport" value="udp"/>
   </appSettings>
