Making things a bit easier to debug

--- a/App.config
+++ b/App.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="sysloghost" value="gcsmon01.ciscloud"/>
     <add key="syslogport" value="5145"/>
-    <add key="syslogtransport" value="udp"/>
+    <add key="syslogtransport" value="tcp"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
