--- a/App.config
+++ b/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="sysloghost" value="gcsmon01.ciscloud"/>
-    <add key="syslogport" value="5145"/>
-    <add key="syslogtransport" value="tcp"/>
+    <add key="sysloghost" value="syslog.example.com"/>
+    <add key="syslogport" value="514"/>
+    <add key="syslogtransport" value="udp"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
